[gd_scene load_steps=10 format=2]

[ext_resource path="res://fonts/Apollo.tres" type="DynamicFont" id=1]
[ext_resource path="res://fonts/ApolloDialogue.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/ApolloDialogueBold.tres" type="DynamicFont" id=3]
[ext_resource path="res://ui/scripts/DialogBox.gd" type="Script" id=4]
[ext_resource path="res://sounds/sfx/07 - VOICE 1.wav" type="AudioStream" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.133333, 0.133333, 0.133333, 0.486275 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Background:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 16, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Background:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 656, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Label:rect_position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 16, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Label:rect_position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 820, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=4]
resource_name = "enter"
tracks/0/type = "bezier"
tracks/0/path = NodePath("Background:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 16, -0.25, 0, 0.25, 0, 16, -0.25, 0, 0.25, 0, 16, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Background:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 820, -0.25, 0, 0.25, 0, 635, -0.25, 0, 0.25, 0, 656, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Label:rect_position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 16, -0.25, 0, 0.25, 0, 16, -0.25, 0, 0.25, 0, 16, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Label:rect_position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 820, -0.25, 0, 0.25, 0, 570, -0.25, 0, 0.25, 0, 600, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}

[sub_resource type="Animation" id=5]
resource_name = "exit"
tracks/0/type = "bezier"
tracks/0/path = NodePath("Background:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 16, -0.25, 0, 0.25, 0, 16, -0.25, 0, 0.25, 0, 16, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Background:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 656, -0.25, 0, 0.25, 0, 635, -0.25, 0, 0.25, 0, 820, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Label:rect_position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 16, -0.25, 0, 0.25, 0, 16, -0.25, 0, 0.25, 0, 16, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Label:rect_position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 600, -0.25, 0, 0.25, 0, 570, -0.25, 0, 0.25, 0, 820, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}

[node name="DialogBox" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Label" type="Label" parent="."]
margin_left = 16.0
margin_top = 820.0
margin_right = 1440.0
margin_bottom = 872.0
custom_fonts/font = ExtResource( 1 )
text = "Ceighsey"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Background" type="Panel" parent="."]
margin_left = 16.0
margin_top = 656.0
margin_right = 1424.0
margin_bottom = 794.0
custom_styles/panel = SubResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
custom_fonts/bold_font = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
scroll_active = false

[node name="NextArrow" type="Label" parent="Background"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -16.0
margin_bottom = 84.0
rect_rotation = 180.0
custom_fonts/font = ExtResource( 1 )
text = "^"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/enter = SubResource( 4 )
anims/exit = SubResource( 5 )

[node name="LetterTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="Voice" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="done_writing" from="." to="." method="_on_DialogBox_done_writing"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
